<resources>
    <string name="app_name">simple-calculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="minus_sign">-</string>
    <string name="add_sign">+</string>
    <string name="multiply_sign">*</string>
    <string name="modulus_sign">%</string>
    <string name="divide_sign">/</string>
    <string name="history_text">History</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>