<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/display_area"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@id/number_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/number_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_one"
        app:layout_constraintBottom_toTopOf="@id/number_four"
        app:layout_constraintEnd_toStartOf="@id/number_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display_area" />
    <Button
        android:id="@+id/number_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_two"
        app:layout_constraintBottom_toTopOf="@id/number_five"
        app:layout_constraintEnd_toStartOf="@id/number_three"
        app:layout_constraintStart_toEndOf="@id/number_one"
        app:layout_constraintTop_toBottomOf="@id/display_area" />
    <Button
        android:id="@+id/number_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_three"
        app:layout_constraintBottom_toTopOf="@id/number_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/number_two"
        app:layout_constraintTop_toBottomOf="@id/display_area" />

    <Button
        android:id="@+id/number_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_four"
        app:layout_constraintBottom_toTopOf="@id/number_seven"
        app:layout_constraintEnd_toStartOf="@id/number_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_one" />
    <Button
        android:id="@+id/number_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_five"
        app:layout_constraintBottom_toTopOf="@id/number_eight"
        app:layout_constraintEnd_toStartOf="@id/number_six"
        app:layout_constraintStart_toEndOf="@id/number_four"
        app:layout_constraintTop_toBottomOf="@id/number_two" />
    <Button
        android:id="@+id/number_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_six"
        app:layout_constraintBottom_toTopOf="@id/number_nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/number_five"
        app:layout_constraintTop_toBottomOf="@id/number_three" />

    <Button
        android:id="@+id/number_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_seven"
        app:layout_constraintBottom_toTopOf="@id/minus_sign"
        app:layout_constraintEnd_toStartOf="@id/number_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_four" />
    <Button
        android:id="@+id/number_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_eight"
        app:layout_constraintBottom_toTopOf="@id/number_zero"
        app:layout_constraintEnd_toStartOf="@id/number_nine"
        app:layout_constraintStart_toEndOf="@id/number_seven"
        app:layout_constraintTop_toBottomOf="@id/number_five" />
    <Button
        android:id="@+id/number_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_nine"
        app:layout_constraintBottom_toTopOf="@id/add_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/number_eight"
        app:layout_constraintTop_toBottomOf="@id/number_six" />

    <Button
        android:id="@+id/minus_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus_sign"
        app:layout_constraintBottom_toTopOf="@id/multiply_sign"
        app:layout_constraintEnd_toStartOf="@id/number_zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_seven" />
    <Button
        android:id="@+id/number_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_zero"
        app:layout_constraintBottom_toTopOf="@id/modulus_sign"
        app:layout_constraintEnd_toStartOf="@id/add_sign"
        app:layout_constraintStart_toEndOf="@id/minus_sign"
        app:layout_constraintTop_toBottomOf="@id/number_eight" />
    <Button
        android:id="@+id/add_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_sign"
        app:layout_constraintBottom_toTopOf="@id/divide_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/number_zero"
        app:layout_constraintTop_toBottomOf="@id/number_nine" />

    <Button
        android:id="@+id/multiply_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply_sign"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toStartOf="@id/modulus_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minus_sign" />
    <Button
        android:id="@+id/modulus_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulus_sign"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toStartOf="@id/divide_sign"
        app:layout_constraintStart_toEndOf="@id/multiply_sign"
        app:layout_constraintTop_toBottomOf="@id/number_zero" />
    <Button
        android:id="@+id/divide_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide_sign"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/modulus_sign"
        app:layout_constraintTop_toBottomOf="@id/add_sign" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_zero" />
</androidx.constraintlayout.widget.ConstraintLayout>